# rust_web_server

./: .gitignore  CHANGELOG_UI_UPDATE.md  Cargo.toml  Makefile.toml  PANDAPOWER_INTEGRATION.md  README.md  run.bat  run.sh
Master/: CommandParser.cpp  CommandParser.h  I2C_Controller.ino  LedHandler.cpp  LedHandler.h  README.md  structs.h
docs/: API-Reference.md  Architecture.md  FRONTEND_UPDATE.md  MESSE_GUIDE.md  QUICK_START.md  README.md  Setup-Guide.md  Testing-Guide.md  UI_COMPONENTS.md
examples/: memory_profile.rs
master/: CommandParser.cpp  CommandParser.h  I2C_Controller.ino  LedHandler.cpp  LedHandler.h  README.md  structs.h
src/: calc.py  config.rs  lib.rs  main.rs
src/frontend/: package-lock.json  package.json
src/frontend/public/: HexagonBotom.stl  index.html
src/frontend/scripts/: ensure-mediapipe-sourcemap.js
src/frontend/src/: App.css  App.tsx  index 2.css  index.css  index.tsx
src/frontend/src/components/: CityScene3D.tsx  ConnectionLine3D.tsx  ControlPanel.css  ControlPanel.tsx  GridSimulator.css  GridSimulator.tsx  Hexagon.tsx  HexagonMesh3D.tsx  HexagonPopup.tsx  Hexagons 2.css  Hexagons.css  Hexagons.tsx  HouseholdMesh3D.tsx  SceneControls.css  SceneControls.tsx  ThemeProvider.tsx  ThemeSwitcher.css  ThemeSwitcher.tsx  hexagonService.ts  hexagonUtils.ts  imageAssets.ts  imageCache.ts  themeContext.ts  types.ts
src/handlers/: grid.rs  led.rs  mod.rs  scan.rs  stop.rs  update.rs
src/models/: mod.rs  requests.rs  responses.rs  state.rs  tests.rs
src/python/: grid_simulator.py
src/serial/: communication.rs  connection.rs  mod.rs  tests.rs
src/utils/: converters.rs  formatters.rs  mod.rs  tests.rs
tests/: e2e_tests.rs  integration_tests.rs
tests/common/: mod.rs
