[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serialport = "4.2"
pyo3 = { version = "0.21", features = ["auto-initialize"] }